// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhileStatement > client > should skip server while statements in non-async functions 1`] = `
{
  "code": "const example = () => {
  while (cond()) {
    'use server';
    doStuff();
  }
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,OAAOC,IAAI,CAAC,CAAC,EAAE;IACb,YAAY;IACZC,OAAO,CAAC,CAAC;EACX;AACF,CAAC",
    "names": [
      "example",
      "cond",
      "doStuff",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        while (cond()) {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
import { value } from "./example.ts?my-example=0.ts";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)();
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export const value = 'foo bar';",
      "map": {
        "file": undefined,
        "mappings": "aACYA,KAAK,GAAG,SAAS",
        "names": [
          "value",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AAEM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      while (cond()) {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should transform break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=0.ts")).default, null)();
  if (type_1 === 0) {
    break;
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should transform continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=0.ts")).default, null)();
  if (type_1 === 1) {
    continue;
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should transform labeled break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
foo: while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=0.ts")).default, null)();
  if (type_1 === 0) {
    if (result_1 === "foo") {
      break foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACMA,GAAG,EAAE,OAAOC,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA,IAAAC,QAAA;MAAA,MAAAH,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should transform labeled continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
foo: while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=0.ts")).default, null)();
  if (type_1 === 1) {
    if (result_1 === "foo") {
      continue foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACMA,GAAG,EAAE,OAAOC,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA,IAAAC,QAAA;MAAA,SAAAH,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
async function foo() {
  const value = 'foo bar';
  while (cond()) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=0.ts")).default, null)(value);
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-foo");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,OAAOC,IAAI,CAAC,CAAC;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA,QADPL,KAAK;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        while (cond()) {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > client > should transform valid server while statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=0.ts")).default, null)();
}",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { server as entry_1 } from "my-example/client";
export default entry_1("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      while (cond()) {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > server > should skip server while statements in non-async functions 1`] = `
{
  "code": "const example = () => {
  while (cond()) {
    'use server';
    doStuff();
  }
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,OAAOC,IAAI,CAAC,CAAC,EAAE;IACb,YAAY;IACZC,OAAO,CAAC,CAAC;EACX;AACF,CAAC",
    "names": [
      "example",
      "cond",
      "doStuff",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        while (cond()) {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`WhileStatement > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
import { value } from "./example.ts?my-example=0.ts";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=2.ts")).default, null)();
}",
  "entries": [
    "/path/to/example.ts?my-example=2.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export const value = 'foo bar';",
      "map": {
        "file": undefined,
        "mappings": "aACYA,KAAK,GAAG,SAAS",
        "names": [
          "value",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { value } from "./example.ts?my-example=0.ts";
export default (async function () {
  try {
    await doStuff(value);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";;;IAIQ,MAAMA,OAAO,CAACC,KAAK,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "doStuff",
          "value",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=2.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=1.ts";
export default entry_1("26ecc3a5-0-anonymous", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AAEM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      while (cond()) {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=1.ts",
  ],
}
`;

exports[`WhileStatement > server > should transform break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)();
  if (type_1 === 0) {
    break;
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (async function () {
  try {
    if (cond()) {
      await doStuff(value);
    } else {
      return [0, null];
    }
    await doMoreStuff();
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";;IAGQ,IAAIA,IAAI,CAAC,CAAC,EAAE;MACV,MAAMC,OAAO,CAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAMC,WAAW,CAAC,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-anonymous", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`WhileStatement > server > should transform continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)();
  if (type_1 === 1) {
    continue;
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (async function () {
  try {
    if (cond()) {
      await doStuff(value);
    } else {
      return [1, null];
    }
    await doMoreStuff();
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";;IAGQ,IAAIA,IAAI,CAAC,CAAC,EAAE;MACV,MAAMC,OAAO,CAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAMC,WAAW,CAAC,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-anonymous", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`WhileStatement > server > should transform labeled break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
foo: while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)();
  if (type_1 === 0) {
    if (result_1 === "foo") {
      break foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (async function () {
  try {
    if (cond()) {
      await doStuff(value);
    } else {
      return [0, "foo"];
    }
    await doMoreStuff();
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";;IAGQ,IAAIA,IAAI,CAAC,CAAC,EAAE;MACV,MAAMC,OAAO,CAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAMC,WAAW,CAAC,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-anonymous", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACMA,GAAG,EAAE,OAAOC,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA,IAAAC,QAAA;MAAA,MAAAH,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`WhileStatement > server > should transform labeled continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
foo: while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)();
  if (type_1 === 1) {
    if (result_1 === "foo") {
      continue foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (async function () {
  try {
    if (cond()) {
      await doStuff(value);
    } else {
      return [1, "foo"];
    }
    await doMoreStuff();
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";;IAGQ,IAAIA,IAAI,CAAC,CAAC,EAAE;MACV,MAAMC,OAAO,CAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAMC,WAAW,CAAC,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-anonymous", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACMA,GAAG,EAAE,OAAOC,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA,IAAAC,QAAA;MAAA,SAAAH,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: while (cond()) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`WhileStatement > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
async function foo() {
  const value = 'foo bar';
  while (cond()) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)(value);
  }
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (async function (value) {
  try {
    await doStuff(value);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "gCAEcA,KAAK;EAAA;IAGT,MAAMC,OAAO,CAACD,KAAK,CAAC;EAAC,SAAAE,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "value",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-foo", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,OAAOC,IAAI,CAAC,CAAC;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA,QADPL,KAAK;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        while (cond()) {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`WhileStatement > server > should transform valid server while statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "dismantle/runtime";
while (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?my-example=1.ts")).default, null)();
}",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (async function () {
  try {
    await doStuff();
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";;IAGQ,MAAMA,OAAO,CAAC,CAAC;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-anonymous", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";AACM,OAAOA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,gDAAAC,OAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      while (cond()) {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;
